2009-10-19	Denis M. Gabaidulin

	* core/Cache/DebugCachePeer.class.php: cache peer for debugging
	and logging purposes.

2009-09-22	Denis M. Gabaidulin

	* core/Form/Primitives/PrimitiveEnumerationByValue.class.php: added
	to manage with enums by the value instead id. Typical usage: every element
	in Enumeration has input[type=submit] representation in html.

2009-09-17	Denis M. Gabaidulin

	* misc/autload.classPathCache.inc.php, misc/autload.wholeClassCache.inc.php:
	added ONPHP_VERSION to checksum hash.

2009-09-17	Vladimir A. Altuchov

	* misc/autoload.classPathCache.inc.php,
	misc/autoload.wholeClassCache.inc.php: added handling for inconsistent
	glob() behaviour.

2009-09-17	Viatcheslav Y. Tsyrulnik

	* meta/classes/MetaClassProperty.class.php: fixed support for
	identifiers of string type.

2009-09-08	Denis M. Gabaidulin

	* main/Utils/Mobile/MobileUtils.class.php: extract ip/user agent
	from headers wrt Opera mini.

2009-09-04	Denis M. Gabaidulin

	* main/Utils/DaoUtils.class.php: increment() method added to work
	with "counter" fields in multithread environment.

2009-08-30	Denis M. Gabaidulin

	* main/Utils/ArrayUtils.class.php: mergeSortedLists() added.
	Classic algorithm implementation for two sorted list merge.

	* main/Base/DateObjectComparator.class.php: added.

2009-08-29	Konstantin V. Arkhipov

	* core/DB/MySQL.class.php: respect port setting.

2009-08-20	Denis M. Gabaidulin

	* main/Crypto/Crypter.class.php: simple mcrypt ext. wrapper added.

2009-08-11	Denis M. Gabaidulin

	* core/Form/Primitives/PrimitiveForm.class.php: ofAutoProto() method added
	to use with generated proto classes. 

2009-08-07	Sergey S. Sergeev

	* main/Base/Hstore.class.php, meta/types/HstoreType.class.php,
	core/DB/PgSQL.class.php, core/Form/Primitives/PrimitiveHstore.class.php,
	core/OSQL/DataType.class.php, main/Base/LightMetaProperty.class.php,
	test/core/PrimitiveHstoreTest.class.php, test/misc/DAOTest.class.php:
	hstore PostgreSql specific dropped.
